# BayDSSAT

./: .DSSATcal.py.swp  DSSATcal.py  main.py  pyproject.toml  run.py
BayCropMod/CSW/: .connect.py.swp  connect.py
BayCropMod/Weather/: __init__.py  get_wth.py
BayDSSAT/: __init__.py
BayDSSAT/CSW/: connect.py
BayDSSAT/Weather/: get_wth.py
BayDSSATold/: main.py  run.py
BayDSSATold/BayCropMod/: __init__.py
BayDSSATold/data/: DSSAT_eval.csv  DSSAT_eval_cal.csv  R1_eval.csv  phen_eval.csv
BayDSSATold/notebooks/: Advertising.html  Crop_phenology.ipynb  DSSATcal_soybean.ipynb  SMC_test.ipynb
BayDSSATold/notebooks/.ipynb_checkpoints/: BH_sequencial-checkpoint.ipynb  CSW_connection-checkpoint.ipynb  Untitled1-checkpoint.ipynb  WB-Copy2-checkpoint.ipynb  WB-checkpoint.ipynb
BayDSSATold/notebooks/crop_test/: CRGRO048.CUL
data/: DSSAT_eval_MATcal.csv  Fenologia_DET_IND.csv  Fenologia_R1_MAT.csv
notebooks/: Clima_CP.ipynb  Crop_phenology.ipynb  DSSATcal_soybean.ipynb  PreviTCH.ipynb  VP_recommend.py  WB-Copy2.ipynb
notebooks/.ipynb_checkpoints/: Clima_CP-checkpoint.ipynb  SMC_test-checkpoint.ipynb
notebooks/crop_test/: CRGRO048.ECO
