[project]
name = ""
version = ""
description = ""
authors = [
    {name = "MD LaTam", email = "wagner.wolff@bayer.com"},
]
dependencies = [
    "requests>=2.28.1",
    "flask>=2.2.2",
    "calplot>=0.1.7.5",
    "p-tqdm>=1.4.0",
    "folium>=0.13.0",
    "pyet>=1.2.1",
]
requires-python = ">=3.8"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
